--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
 	"id": "advanced-ruby",
 	"name": "Advanced Ruby",
 	"version": "1.0.0",
-	"minAppVersion": 1.9.14",
-	"description": "Advanced language-independent ruby support.",
+	"minAppVersion": "1.9.14",
+	"description": "Flexible ruby annotation plugin for Obsidian.",
 	"author": "Peter Yanase",
 	"isDesktopOnly": false
 }
