fixed editing view

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
 	"name": "advanced-ruby",
-	"version": "1.0.6",
+	"version": "1.0.7",
 	"description": "Flexible, language-independent ruby annotation rendering.",
 	"main": "main.js",
+	"type": "module",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
@@ -10,15 +11,22 @@
 	},
 	"keywords": [],
 	"author": "Peter Yanase",
-	"license": "MIT",
+	"license": "GPL-3.0-only",
+	"peerDependencies": {
+		"@codemirror/language": "^6.0.0"
+	},
 	"devDependencies": {
 		"@types/node": "^16.11.6",
-		"@typescript-eslint/eslint-plugin": "5.29.0",
-		"@typescript-eslint/parser": "5.29.0",
-		"builtin-modules": "3.3.0",
-		"esbuild": "0.17.3",
-		"obsidian": "latest",
+		"esbuild": "0.25.5",
+		"eslint-plugin-obsidianmd": "0.1.9",
+		"globals": "14.0.0",
 		"tslib": "2.4.0",
-		"typescript": "4.7.4"
+		"typescript": "^5.8.3",
+		"typescript-eslint": "8.35.1",
+		"@eslint/js": "9.30.1",
+		"jiti": "2.6.1"
+	},
+	"dependencies": {
+		"obsidian": "latest"
 	}
 }
